@@ -66,6 +66,12 @@
                <td><input type="text" name="author" /></td> </tr>
           <tr> <td><label for="authorEmail">Author-Email</label></td>
                <td><input type="text" name="authorEmail" /></td> </tr>
+          <tr> <td>
+                 <label for="pub">
+                 <dfn title="determines if this entry gets synced with public services like del.icio.us and simpy">Public</dfn>
+                 </label>
+               </td>
+               <td><input type="checkbox" name="pub" value="true" /></td> </tr>
           <tr> <td>Issued</td>      
                <td><input type="text" name="issuedDate" readonly="readonly"/></td> </tr>
           <tr> <td>Modified</td>
