@@ -9,6 +9,7 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} [%-5p] - %m%n
 
 log4j.logger.org.roosster=DEBUG
+log4j.logger.org.roosster.logging.VelocityLogSystem=WARN
 log4j.logger.httpclient.wire.header=DEBUG
 
 
