@@ -9,5 +9,6 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE}  [%-5p]  - %m%n
 
 log4j.logger.org.roosster=INFO
+log4j.logger.org.roosster.logging.VelocityLogSystem=WARN
 
 
